--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
   padding: 0;
 }
 
+/* body  */
+
 .container {
   display: flex;
   justify-content: center;
@@ -11,13 +13,12 @@
   height: 100vh;
 }
 
+/* calculator body  */
+
 .container .calculator {
   display: flex;
-  /* justify-content: center; */
-  /* align-items: center;  */
   flex-direction: column;
   background-color: #fffbfa;
-  /* border: 2px solid black; */
   border: none;
   border-radius: 8px;
   width: 350px;
@@ -25,31 +26,32 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+/* calculator button row  */
+
 .container .calculator .row {
   display: flex;
   justify-content: center;
-  /* align-items: center; */
-  /* padding: 5px 10px 10px 10px ; */
 }
+
+/* calculator buttons  */
 
 .button {
   background-color: #f9f1ef;
   border: none;
   border-radius: 50%;
   color: #57342e;
-  /* padding: 15px 32px; */
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 25px;
   font-weight: 500;
-  /* margin: 0 15px 0  0; */
   margin: 10px;
   width: 70px;
   height: 70px;
   box-shadow: 0 4px 8px 0 rgba(254, 254, 254, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  
 }
+
+/* screen  */
 
 .button-screen {
   width: 700px;
@@ -57,17 +59,17 @@
   background-color: #f5d8da;
   border: none;
   border-radius: 8px 8px 30px 30px;
-  /* margin-top: 0px; */
   text-align: right ;
   text-decoration: none;
-  /* display: inline-block; */
   font-size: 25px;
 }
 
+/* buttons color change  */
 .button1 {
   background-color: #fce096;
 }
 
+/* button color change  */
 .buttonspecial {
   background-color: #ffdcd8;
 }
